Fixed widget width and height being bugged when moving out of screen

--- a/src/components/widgetmover/wrapper/styles.module.css
+++ b/src/components/widgetmover/wrapper/styles.module.css
@@ -1,5 +1,7 @@
 .wrapper {
     position: absolute;
+    width: max-content;
+    height: max-content;
 }
 
 .moverEnabled {
